depthai-sys/csrc/depthai_c.h

typedef struct dai_calib dai_calib;           /* heap dai::CalibrationHandler (copy)     */
int dai_calib_baseline_distance(const dai_calib* c, int32_t cam1, int32_t cam2, int use_spec_translation, int32_t unit,
                                float* out);
int dai_calib_stereo_left_socket(const dai_calib* c, int32_t* out);
int dai_calib_stereo_right_socket(const dai_calib* c, int32_t* out);
int dai_calib_fov(const dai_calib* c, int32_t socket, int use_spec, float* out);