depthai-sys/src/ffi.rs

    pub fn dai_calib_baseline_distance(
        c: *const dai_calib,
        cam1: i32,
        cam2: i32,
        use_spec_translation: c_int,
        unit: i32,
        out: *mut f32,
    ) -> c_int;
    pub fn dai_calib_stereo_left_socket(c: *const dai_calib, out: *mut i32) -> c_int;
    pub fn dai_calib_stereo_right_socket(c: *const dai_calib, out: *mut i32) -> c_int;
    pub fn dai_calib_fov(c: *const dai_calib, socket: i32, use_spec: c_int, out: *mut f32)
        -> c_int;
}
